src/test/ui/dont-suggest-private-trait-method.stderr
error[E0599]: no function or associated item named `new` found for type `T` in the current scope
  --> $DIR/dont-suggest-private-trait-method.rs:4:8
   |
LL | struct T;
   | --------- function or associated item `new` not found for this
...
LL |     T::new();
   |        ^^^ function or associated item not found in `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
